# CueLint

./: AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
aidlc-docs/: aidlc-state.md  audit.md  construction-readiness.md
aidlc-docs/construction/cuelint/code/: code-generation-summary.md
aidlc-docs/construction/plans/: cuelint-code-generation-plan.md
aidlc-docs/inception/: inception-summary.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md
aidlc-docs/inception/plans/: application-design-plan.md  execution-plan.md  story-generation-plan.md  user-stories-assessment.md
aidlc-docs/inception/requirements/: requirement-verification-questions.md  requirements.md
aidlc-docs/inception/user-stories/: personas.md  stories.md
docs/: release-readiness-v0.1.0.md  release-readiness-v0.1.1.md  release-readiness-v0.1.2.md
docs/iterations/: AUDIT_2.md  AUDIT_3.md  AUDIT_4.md  AUDIT_5.md  AUDIT_6.md  AUDIT_7.md  AUDIT_8.md  PLAN_2.md  PLAN_3.md  PLAN_4.md  PLAN_5.md  PLAN_6.md  PLAN_7.md  PLAN_8.md
samples/: assistant-response.txt
src/cuelint/: __init__.py  __main__.py  cli.py  detector.py  errors.py  flags.py  formatter.py  metrics.py  models.py  normalizer.py  patterns.py  service.py
tests/: test_cli.py  test_detector.py  test_formatter.py  test_metrics_flags.py  test_normalizer.py
